# rust

./: .gitignore
FtoC/src/: main.rs
actix_webapi/: .gitignore  Cargo.toml  log_config.yaml
actix_webapi/src/: api.rs  log.rs  main.rs
ai/src/: m1_enums.rs  m2_struct.rs  m3_traits.rs  m4_polymorphism.rs  m7_async.rs  m8_hashmap.rs
cat/src/: main.rs
chainlink/: Cargo.toml
chainlink/src/: lib.rs
cleancut/closures/: Cargo.toml
code_craft/: Cargo.toml  README.md
code_craft/src/: main.rs
code_lines_counter/src/: lib.rs  main.rs
count_lines/: Cargo.toml
count_lines/src/: lib.rs  main.rs  (+1 more)
data_struct/: Cargo.toml
date_format_serde/: Cargo.toml
db_calls/: .gitignore  CLAUDE.md  Cargo.toml
db_calls/api_call/: Cargo.toml
db_calls/api_call/src/: lib.rs
db_calls/dal/: Cargo.toml
db_calls/dal/src/: lib.rs
db_calls/dal/src/dal_ch/: mod.rs
db_calls/dao/: Cargo.toml
db_calls/dao/src/: lib.rs
db_calls/src/: main.rs
db_calls/webapi/: Cargo.toml
db_calls/webapi/src/: main.rs
encrypt_file/: Cargo.toml  Cargo.toml.enc
err_handling/: Cargo.toml
fib_series/: Cargo.toml
file_io/: Cargo.toml
hello/: .gitignore  Cargo.toml
linear_reg/: 1_wt-bias.csv  Cargo.toml
log/: Cargo.toml  log_config.yaml
logbook/: Cargo.toml
rail_fence/: Cargo.toml
read_csv/: Cargo.toml
rust_book_brown_2/: Cargo.toml
rustlings/: .gitignore
scratch_pad/: Cargo.toml
stock_prices/: Cargo.toml
stock_prices/config/: log4rs.yaml
stock_prices/data/: AAPL.csv
stock_prices/src/: lib.rs  main.rs
webapi/: Cargo.toml
zero2prod/: Cargo.toml
(+78 files in other folders)
