[workspace]
members = [
    "api_call",
    "dal",
]
resolver = "3"

[workspace.package]
edition = "2024"

[workspace.dependencies]
tokio = { version = "1.42", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
actix-web = "4"

[package]
name = "webapi"
version = "0.1.0"
edition.workspace = true

[dependencies]
api_call = { path = "api_call" }
dal = { path = "dal" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
actix-web.workspace = true
anyhow.workspace = true
clickhouse = "0.12"
